# SerialTool-Qt

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SerialTool.pro  SerialTool2.pro  appconfig.cpp  appconfig.h  customdatasendwidget.cpp  customdatasendwidget.h  customdatasendwidget.ui  customitem.h  customitem.ui  dataStructure.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbustab.cpp  modbustab.h  networkmanager.cpp  networkmanager.h  res.qrc  resource.qrc  sendfiledialog.cpp  sendfiledialog.h  sendfiledialog.ui  serialmanager.cpp  serialmanager.h  serialsettingdialog.cpp  serialsettingdialog.h  serialsettingdialog.ui  style.qss  tabpage.ui
assets/: app_ico.rc  assets.qrc  style.qss
resource/: style.qss
src/: appconfig.cpp  appconfig.h  dataStructure.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  serialmanager.cpp  serialmanager.h  serialsettingdialog.cpp
src/dialog/: sendfiledialog.cpp  sendfiledialog.h  sendfiledialog.ui  sendw25qxx.cpp  sendw25qxx.h  sendw25qxx.ui  serialsettingdialog.cpp  serialsettingdialog.h
src/tab_page/: tabpage.cpp  tabpage.h
src/tab_page/list_item/: customitem.cpp  customitem.h  customitem.ui
